# Final-Year-Project

./: .gitignore
server/: Procfile  build.sh  pyproject.toml  render.yaml  requirements.txt
server/.github/workflows/: ping-render.yml
server/api/: settings.py  urls.py
server/blockchain/: __init__.py  deploy_contract.py  web3_client.py
server/hms/: admin.py  blockchain_service.py  models.py  serializers.py  tests.py  urls.py  views.py
server/hms/management/commands/: authorize_account.py
server/hms/migrations/: 0001_initial.py  0002_remove_medicine_expiry_date.py  0003_alter_patient_gender.py  0004_remove_diagnosis_date_remove_diagnosis_doctor_id_and_more.py  0005_alter_diagnosis_doctor_alter_laboders_doctor_and_more.py  0006_appointments.py  0007_remove_appointments_date.py  0008_delete_appointments.py  0009_appointments.py  0010_alter_labresults_lab_order_alter_labresults_patient.py  0011_remove_labresults_patient_alter_labresults_lab_order.py  0012_delete_sale.py  0013_sale.py  0014_appointments_payment_status_patient_payment_status.py  0015_alter_user_role.py  0016_alter_labresults_result.py  0017_alter_laboders_tests_alter_labresults_result.py  0018_remove_labresults_lab_order_delete_laboders_and_more.py  0019_laboders_labresults.py  0020_alter_diagnosis_created_at_alter_laboders_created_at_and_more.py  0021_alter_sale_date_alter_user_role_and_more.py  0022_onchainaudit_alter_appointments_options_and_more.py  0023_onchainaudit_record_cid.py  0024_diagnosis_blockchain_hash_and_more.py  0025_alter_laboders_doctor.py
server/static/hms/: admin_authorize.js
(+62 files in other folders)
