[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hms-api"
version = "1.0.0"
description = "Decentralized Healthcare Management System API"
requires-python = ">=3.9"

[tool.setuptools]
# No packages to discover, this is just for build configuration
